--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import 'abstracts/variables';
 
 @import 'components/btn-plan';
+@import 'components/process';
 
 @import 'base/base';
 @import 'base/typography';
