--- a/sass/components/_process.scss
+++ b/sass/components/_process.scss
@@ -3,10 +3,17 @@
     padding-top: 10rem;
   }
   &__items {
-    padding-bottom: 8rem;
+    padding-bottom: 10rem;
   }
-  &__items > *:not(:last-child) {
-    border-top: 2px solid $color-orange;
+  &__line {
+    width: calc(100% - 15px);
+    height: 2px;
+    background-color: $color-orange;
+    top: 0;
+    left: 15px;
+    position: absolute;
+    transform: translateY(-50%);
+    border: none;
   }
   &__header {
     .heading-quaternary {
