--- a/sass/pages/_plan.scss
+++ b/sass/pages/_plan.scss
@@ -1,3 +1,16 @@
-.plan-container {
-  height: 100vh; //temporary
+// Hero
+.hero-plan {
+  height: 45rem;
+  background-image: url(../../src/assets/plan/desktop/image-hero-blackcup.jpg);
+
+  &__container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .text-light {
+    margin-top: 3.2rem;
+    width: 50%;
+  }
 }
