--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -40,3 +40,10 @@ a {
   color: inherit;
   text-transform: inherit;
 }
+.input-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
