--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 
 @import 'components/btn-plan';
 @import 'components/process';
+@import 'components/form';
 
 @import 'base/base';
 @import 'base/typography';
