Form btn css completed, order summary css completed

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -67,3 +67,8 @@ ORDER: Base + typography > general layout + grid > page layout > components
     }
   }
 }
+@mixin bgDark() {
+  background: url(../../src/assets/about/desktop/bg-quality.png);
+  background-size: cover;
+  background-color: $color-primary-dark-gray-blue;
+}
