--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'components/btn-plan';
 @import 'components/process';
 @import 'components/form';
+@import 'components/summary';
 
 @import 'base/base';
 @import 'base/typography';
