--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import 'components/process';
 @import 'components/form';
 @import 'components/summary';
+@import 'components/form-nav';
 
 @import 'base/base';
 @import 'base/typography';
