--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -47,3 +47,14 @@ a {
   height: 0;
   width: 0;
 }
+button {
+  display: inline-block;
+  border: none;
+  margin: 0;
+  text-decoration: none;
+  background: transparent;
+  cursor: pointer;
+  text-align: center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
