--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import 'components/form';
 @import 'components/summary';
 @import 'components/form-nav';
+@import 'components/submit-modal';
 
 @import 'base/base';
 @import 'base/typography';
