--- a/sass/components/_submit-modal.scss
+++ b/sass/components/_submit-modal.scss
@@ -1,5 +1,52 @@
+.ReactModal__Overlay {
+  background-color: rgba(0, 0, 0, 0.6) !important;
+}
+.submit-modal-content {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 540px;
+  height: 597px;
+  background-color: #fefcf7;
+  border: none;
+  border-radius: 12px;
+
+  &__container {
+    padding: 1px 5.6rem 5.6rem 5.6rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
 .submit-modal {
-  &__p {
+  &__heading {
+    color: #fefcf7 !important;
+    font-size: 4rem !important;
+    padding-top: 4.8rem;
+    padding-left: 5.8rem;
+    padding-bottom: 4.8rem;
+    margin-bottom: 9.7rem;
+    @include bgDark;
+  }
+  &__summary {
     color: $color-light-gray !important;
   }
+  &__text {
+    color: $color-primary-dark-gray-blue;
+    margin-top: 7px;
+    margin-bottom: 4.7rem;
+  }
+  &__price-container {
+    display: flex;
+    align-items: center;
+  }
+}
+.submit-modal-btn {
+  padding: 1.6rem 5.4rem 1.6rem 5.4rem;
+}
+.submit-modal-price {
+  color: $color-primary-dark-gray-blue !important;
+  margin-right: 1.6rem;
 }
