Added form finished to state and submit button background connected to this state.

--- a/sass/pages/_plan.scss
+++ b/sass/pages/_plan.scss
@@ -2,6 +2,8 @@
 .hero-plan {
   height: 45rem;
   background-image: url(../../src/assets/plan/desktop/image-hero-blackcup.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 
   &__container {
     height: 100%;
