--- a/sass/components/_btn-plan.scss
+++ b/sass/components/_btn-plan.scss
@@ -3,9 +3,19 @@
   font-weight: 700;
   font-size: 1.8rem;
   color: $color-light-cream-1;
-  background-color: $color-primary-cyan;
   padding: 1.5rem 3rem 1.5rem 3rem;
   border-radius: 5px;
   border-style: hidden;
   cursor: pointer;
+
+  &:hover {
+    background-color: #66d2cf;
+  }
+
+  &--complete {
+    background-color: $color-primary-cyan;
+  }
+  &--incomplete {
+    background-color: $color-light-cream-2;
+  }
 }
