--- a/sass/components/_submit-modal.scss
+++ b/sass/components/_submit-modal.scss
@@ -47,6 +47,7 @@
 }
 .submit-modal-btn {
   padding: 1.6rem 5.4rem 1.6rem 5.4rem;
+  background-color: $color-primary-cyan;
 }
 .submit-modal-price {
   color: $color-primary-dark-gray-blue !important;
