--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,3 +3,8 @@
   justify-content: space-between;
   margin-bottom: 4.5rem;
 }
+.header-navigation {
+  &:hover {
+    color: $color-primary-dark-gray-blue;
+  }
+}
