--- a/sass/components/_process.scss
+++ b/sass/components/_process.scss
@@ -1,12 +1,21 @@
 .process {
+  @include respond(tab-port) {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    margin-bottom: 7rem !important;
+    transform: translateY(-12rem);
+  }
   &__container {
     padding-top: 10rem;
   }
   &__items {
     padding-bottom: 10rem;
+    @include respond(tab-port) {
+      padding-bottom: 4.4rem;
+    }
   }
   &__line {
-    width: calc(100% - 15px);
+    width: calc(110%);
     height: 2px;
     background-color: $color-orange;
     top: 0;
@@ -19,19 +28,25 @@
     .heading-quaternary {
       color: $color-gray-red !important;
       margin-bottom: 8rem;
+      margin-left: 4rem;
+      transform: translateY(-12rem);
     }
   }
 }
 .process-item {
   position: relative;
   padding-top: 6.7rem;
-  margin-right: -56px;
 
   & > .heading-primary {
     margin-bottom: 3.8rem;
   }
   & > .heading-secondary {
     margin-bottom: 4.2rem;
+
+    @include respond(tab-port) {
+      font-size: 2.8rem;
+      line-height: 32px;
+    }
   }
   & > .text-dark,
   .text-light {
