--- a/sass/components/_submit-modal.scss
+++ b/sass/components/_submit-modal.scss
@@ -46,12 +46,7 @@
   }
 }
 .submit-modal-btn {
-  padding: 1.6rem 5.4rem 1.6rem 5.4rem;
-  background-color: $color-primary-cyan;
-
-  &:hover {
-    background-color: #66d2cf;
-  }
+  padding: 1.6rem 5.4rem 1.6rem 5.4rem !important;
 }
 .submit-modal-price {
   color: $color-primary-dark-gray-blue !important;
