--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -34,4 +34,8 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 4rem;
+
+  @include respond(tab-port) {
+    gap: 2.4rem;
+  }
 }
