--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -22,6 +22,10 @@
     margin-left: 4rem;
     margin-right: 4rem;
   }
+  @include respond(phone) {
+    margin-left: 2.4rem;
+    margin-right: 2.4rem;
+  }
 }
 .u-margin-left-right-m {
   margin-left: 16.5rem;
