--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -12,6 +12,10 @@
       flex-direction: column;
       justify-content: center;
     }
+    @include respond(phone) {
+      height: 346px;
+      justify-content: center;
+    }
 
     & > .navigation-list {
       margin-left: 10.3rem;
@@ -20,9 +24,17 @@
         margin-left: initial;
         margin-bottom: 6.5rem;
       }
+      @include respond(phone) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
       &__item > a {
         @include respond(tab-port) {
           font-size: 1.2rem;
+        }
+        @include respond(phone) {
+          margin-bottom: 2.4rem;
         }
       }
     }
@@ -33,6 +45,9 @@
 
     @include respond(tab-port) {
       margin-bottom: 2.3rem;
+    }
+    @include respond(phone) {
+      margin-bottom: 4.8rem;
     }
   }
 }
