--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -4,6 +4,10 @@
   background-repeat: no-repeat;
   background-size: cover;
 
+  @include respond(phone) {
+    background-position: center;
+  }
+
   &__container {
     display: flex;
     flex-direction: column;
@@ -17,6 +21,17 @@
       @include respond(tab-port) {
         width: 60%;
       }
+      @include respond(phone) {
+        width: initial;
+        text-align: center;
+        line-height: 25px;
+        font-size: 15px;
+      }
+    }
+    & > .heading-secondary {
+      @include respond(phone) {
+        text-align: center;
+      }
     }
   }
 }
@@ -29,6 +44,12 @@
     margin-right: 4rem;
     margin-bottom: 35rem;
   }
+  @include respond(phone) {
+    margin-left: 2.4rem;
+    margin-right: 2.4rem;
+    flex-direction: column;
+    margin-bottom: 23rem;
+  }
 
   & > img {
     margin-right: 12.5rem;
@@ -38,6 +59,11 @@
       width: 281px;
       height: 470px;
       object-fit: cover;
+    }
+    @include respond(phone) {
+      width: 100%;
+      height: initial;
+      margin-bottom: 4.8rem;
     }
   }
   &__text {
@@ -49,6 +75,9 @@
       align-self: initial;
       font-size: 15px;
       line-height: 25px;
+    }
+    @include respond(phone) {
+      text-align: center;
     }
     & > .heading-secondary {
       color: $color-primary-dark-gray-blue;
@@ -72,9 +101,12 @@
       align-items: center;
       transform: translateY(-15%);
     }
+    @include respond(phone) {
+      height: 509px;
+      transform: translateY(-7%);
+    }
 
     & > img {
-      // transform: translateY(-40%);
       width: 445px;
       height: 474px;
 
@@ -85,6 +117,10 @@
         object-fit: cover;
         object-position: bottom;
       }
+      @include respond(phone) {
+        width: 279px;
+        height: 156px;
+      }
     }
   }
   &__text {
@@ -94,11 +130,18 @@
       text-align: center;
       width: 80%;
     }
+    @include respond(phone) {
+      width: 100%;
+    }
     & > .heading-secondary {
       margin-bottom: 3.2rem;
-      white-space: nowrap;
 
       @include respond(tab-port) {
+        white-space: nowrap;
+      }
+      @include respond(phone) {
+        white-space: initial;
+        font-size: 3.3rem;
       }
     }
     & > .text-light {
@@ -112,16 +155,46 @@
 // Locations section
 
 .location {
+  @include respond(phone) {
+    margin: initial;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 12rem;
+  }
   & > .heading-quaternary {
     color: $color-gray-red;
     margin-bottom: 7.2rem;
+
+    @include respond(phone) {
+      white-space: nowrap;
+      font-size: 24px;
+    }
   }
   &__item {
+    @include respond(phone) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
     & > img {
       margin-bottom: 4.6rem;
+
+      @include respond(phone) {
+      }
     }
     & > .heading-tertiary {
       margin-bottom: 2.4rem;
+    }
+    & > .text-dark {
+      text-align: center;
+      font-size: 16px;
+      line-height: 26px;
+    }
+  }
+  & > .grid-3 {
+    @include respond(phone) {
+      gap: 8rem;
     }
   }
 }
