--- a/sass/components/_form-nav.scss
+++ b/sass/components/_form-nav.scss
@@ -1,5 +1,9 @@
 .form-nav-container {
   margin-right: 12.5rem;
+
+  @include respond(tab-port) {
+    display: none;
+  }
 }
 .form-nav {
   &__item {
