--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,8 +1,22 @@
 .form-container {
   position: relative;
+
+  @include respond(tab-port) {
+    margin-left: 4rem !important;
+    margin-right: 4rem !important;
+    margin-bottom: 200px !important;
+  }
+  @include respond(phone) {
+    margin-left: 2.4rem !important;
+    margin-right: 2.4rem !important;
+  }
 }
 .form-columns {
   display: flex;
+
+  @include respond(tab-port) {
+    display: initial;
+  }
 }
 .form-question {
   margin-bottom: 8.8rem;
@@ -10,6 +24,13 @@
   .heading-secondary {
     white-space: nowrap;
     color: $color-light-gray;
+
+    @include respond(phone) {
+      white-space: initial;
+      font-size: 24px;
+      width: 70%;
+      line-height: 28px;
+    }
   }
 }
 .question-disabled {
@@ -33,8 +54,14 @@
 }
 .input-container {
   display: flex;
-  // margin-bottom: 8.8rem;
   flex-grow: 1;
+
+  @include respond(tab-port) {
+    width: 100%;
+  }
+  @include respond(phone) {
+    flex-direction: column;
+  }
 
   & > *:not(:last-child) {
     margin-right: 2.3rem;
@@ -47,6 +74,12 @@
   border-radius: 8px;
   background-color: $color-light-cream-3;
 
+  @include respond(phone) {
+    width: 100%;
+    height: 140px;
+    margin-bottom: 1.6rem;
+  }
+
   &:hover {
     background-color: #fdd6ba;
     border-radius: 8px;
@@ -56,10 +89,19 @@
     color: $color-primary-dark-gray-blue;
     margin: 3.2rem 0 2.4rem 2.8rem;
     position: relative;
+
+    @include respond(phone) {
+      font-size: 24px;
+    }
   }
   .text-dark {
     margin-left: 2.8rem;
     position: relative;
+
+    @include respond(phone) {
+      font-size: 16px;
+      line-height: 26px;
+    }
   }
   label {
     position: absolute;
@@ -103,6 +145,10 @@
   font-weight: 900;
   background-color: $color-primary-cyan;
 
+  @include respond(tab-port) {
+    left: 50%;
+    transform: translateX(-50%);
+  }
   &--incomplete {
     background-color: $color-light-cream-2;
   }
