--- a/sass/pages/_plan.scss
+++ b/sass/pages/_plan.scss
@@ -1,18 +1,50 @@
 // Hero
 .hero-plan {
   height: 45rem;
-  background-image: url(../../src/assets/plan/desktop/image-hero-blackcup.jpg);
+  background: url(../../src/assets/plan/desktop/image-hero-blackcup.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+
+  @include respond(phone) {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url(../../src/assets/plan/desktop/image-hero-blackcup.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
   &__container {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    & > .heading-primary {
+      @include respond(phone) {
+        font-size: 40px;
+        margin: 0 auto;
+      }
+    }
   }
   .text-light {
     margin-top: 3.2rem;
     width: 50%;
+
+    @include respond(tab-port) {
+      width: 60%;
+    }
+    @include respond(phone) {
+      width: initial;
+      text-align: center;
+      line-height: 25px;
+      font-size: 15px;
+    }
+  }
+}
+// Process
+.plan__process .process__container {
+  @include respond(tab-port) {
+    margin-left: initial !important;
+    margin-right: initial !important;
   }
 }
