--- a/sass/components/_process.scss
+++ b/sass/components/_process.scss
@@ -26,7 +26,7 @@
     }
   }
   &__line {
-    width: calc(110%);
+    width: calc(100% + 4rem);
     height: 2px;
     background-color: $color-orange;
     top: 0;
@@ -35,6 +35,9 @@
     transform: translateY(-50%);
     border: none;
 
+    @include respond(tab-port) {
+      width: calc(100% + 2.4rem);
+    }
     @include respond(phone) {
       display: none;
     }
