--- a/sass/components/_summary.scss
+++ b/sass/components/_summary.scss
@@ -12,7 +12,8 @@
 
   @include respond(phone) {
     padding: 3.2rem 2.5rem 3.2rem 2.5rem;
-    height: 338px;
+    min-height: 338px;
+    height: initial;
     justify-content: center;
     margin-bottom: 5.6rem;
   }
@@ -20,6 +21,8 @@
     @include respond(phone) {
       font-size: 24px;
       line-height: 40px;
+      margin-right: 1rem;
+      word-wrap: break-word;
     }
   }
 }
@@ -37,4 +40,9 @@
 }
 .summary-selection {
   color: $color-primary-cyan;
+}
+.summary-line {
+  @include respond(phone) {
+    padding-left: 40px !important;
+  }
 }
